# CMakeExample

./: CMakeLists.txt  README  README.md
src/: main.f90  module_bind_dir_handling.f90  module_dir_handling.c
